--- a/jbpm-docs/pom.xml
+++ b/jbpm-docs/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm</artifactId>
-    <version>5.4.0-SNAPSHOT</version>
+    <version>5.4.0.object_param.2.Final</version>
   </parent>
 
   <artifactId>jbpm-docs</artifactId>
