--- a/jbpm-workitems/pom.xml
+++ b/jbpm-workitems/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm</artifactId>
-    <version>5.4.0-SNAPSHOT</version>
+    <version>5.4.0.object_param.2.Final</version>
   </parent>
 
   <artifactId>jbpm-workitems</artifactId>
