--- a/jbpm-distribution/pom.xml
+++ b/jbpm-distribution/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm</artifactId>
-    <version>5.4.0.object_param.2.Final</version>
+    <version>5.4.0.object_param-SNAPSHOT</version>
   </parent>
 
   <artifactId>jbpm-distribution</artifactId>
