--- a/jbpm-gwt/jbpm-gwt-console-tomcat-integration/pom.xml
+++ b/jbpm-gwt/jbpm-gwt-console-tomcat-integration/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>jbpm-gwt</artifactId>
     <groupId>org.jbpm</groupId>
-    <version>5.4.0.object_param.2.Final</version>
+    <version>5.4.0.object_param-SNAPSHOT</version>
   </parent>
   <artifactId>jbpm-gwt-console-tomcat-integration</artifactId>
   <name>jBPM GWT Tomcat integration</name>
