--- a/jbpm-human-task/jbpm-human-task-workitems/pom.xml
+++ b/jbpm-human-task/jbpm-human-task-workitems/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jbpm</groupId>
         <artifactId>jbpm-human-task</artifactId>
-        <version>5.4.0.object_param.2.Final</version>
+        <version>5.4.0.object_param-SNAPSHOT</version>
     </parent>
  
     <artifactId>jbpm-human-task-workitems</artifactId>
